--- a/HTML/clickme.html
+++ b/HTML/clickme.html
@@ -11,7 +11,8 @@
     <script>
       const counterElement = document.getElementById("counter");
       let count = 0;
-
+//count starts from 0 
+      
       document.getElementById("button").addEventListener("click", () => {
         count++; // increment count by 1
         counterElement.innerText = count;
